Change map image URLs to GitHub links
Updated map image URLs to point to GitHub repository.

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
 
     <script>
         const mapData = {
-            skeld: "https://static.wikia.nocookie.net/among-us/images/8/82/Skeld_Map.png",
-            mira: "https://static.wikia.nocookie.net/among-us-wiki/images/7/77/MIRA_HQ_map.png/revision/latest?cb=20220403001822",
-            polus: "https://static.wikia.nocookie.net/among-us-wiki/images/a/ab/Polus_map.png/revision/latest?cb=20201111010008",
-            airship: "https://static.wikia.nocookie.net/among-us-wiki/images/a/a1/The_Airship_map.png/revision/latest?cb=20220622191604",
-            fungle: "https://static.wikia.nocookie.net/among-us-wiki/images/3/39/The_Fungle_map.png/revision/latest?cb=20231025222724"
+            skeld: "https://github.com/TownofReworked/modded-detective-board/main/Skeld.png",
+            mira: "https://github.com/TownofReworked/modded-detective-board/main/Mira.png",
+            polus: "https://github.com/TownofReworked/modded-detective-board/main/Polus.png",
+            airship: "https://github.com/TownofReworked/modded-detective-board/main/Airship.png",
+            fungle: "https://github.com/TownofReworked/modded-detective-board/main/Fungle.png"
         };
 
         const allColors = [
