Update map image URLs to local paths

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
 
     <script>
         const mapData = {
-            skeld: "https://github.com/TownofReworked/modded-detective-board/blob/main/Skeld.png",
-            mira: "https://github.com/TownofReworked/modded-detective-board/blob/main/Mira.png",
-            polus: "https://github.com/TownofReworked/modded-detective-board/blob/main/Polus.png",
-            airship: "https://github.com/TownofReworked/modded-detective-board/blob/main/Airship.png",
-            fungle: "https://github.com/TownofReworked/modded-detective-board/blob/main/Fungle.png"
+            skeld: "./Maps/Skeld.png",
+            mira: "./Maps/Mira.png",
+            polus: "./Maps/Polus.png",
+            airship: "./Maps/Airship.png",
+            fungle: "./Maps/Fungle.png"
         };
 
         const allColors = [
