Update map image paths in index.html

--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 
     <script>
         const mapData = {
-            skeld: "./Maps/TheSkeld.png",
-            mira: "./Maps/MiraHQ.png",
+            skeld: "./Maps/Skeld.png",
+            mira: "./Maps/Mira.png",
             polus: "./Maps/Polus.png",
-            airship: "./Maps/TheAirship.png",
-            fungle: "./Maps/TheFungle.png"
+            airship: "./Maps/Airship.png",
+            fungle: "./Maps/Fungle.png"
         };
 
         const allColors = [
