Update map image URLs to local paths

--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
 
     <script>
         const mapData = {
-            skeld: "https://static.wikia.nocookie.net/among-us-wiki/images/5/52/The_Skeld_Map.png",
-            mira: "https://static.wikia.nocookie.net/among-us-wiki/images/4/47/MIRA_HQ_Map.png",
-            polus: "https://static.wikia.nocookie.net/among-us-wiki/images/d/df/Polus_Map.png",
-            airship: "https://static.wikia.nocookie.net/among-us-wiki/images/8/82/The_Airship_Map.png",
-            fungle: "https://static.wikia.nocookie.net/among-us-wiki/images/d/df/The_Fungle_Map.png"
+            skeld: "./Maps/Skeld.png",
+            mira: "./Maps/Mira.png",
+            polus: "./Maps/Polus.png"",
+            airship: "./Maps/Airship.png",
+            fungle: "./Maps/Fungle.png"
         };
 
         const allColors = [
