Implement media query for player marker styling
Add responsive styles for player markers and role tags

--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
             white-space: nowrap;
         }
 
+        @media (max-width: 640px) {
+            .player-marker {
+            width: 22px;
+            height: 22px;
+            }
+
+
+            .marker-role-tag {
+            font-size: 6px;
+            padding: 1px 3px;
+            margin-bottom: 1px;
+            }
+        }
+
         .crew-card {
             transition: all 0.1s ease;
             border-left-width: 5px;
